My Second day of learning HTML and CSS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big Cats</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Big Cats</h1>
-    <h2>Lions</h2>
+    <h1><strong>Big Cats</strong></h1>
+    <h2><em>Lions</em></h2>
     <p>Here are some fun facts about lions.</p>
     <ul>
         <li>Lions weigh up to 250 kgs.</li>
@@ -20,7 +21,7 @@
         <li>Don't make eye contact.</li>
         <li>Wave your arms above your head and scream as loud as you can!</li>
     </ol>
-    <h2>Tigers</h2>
+    <h1><em>Tigers</em></h1>
     <p>Here are some fun facts about tigers.</p>
     <ul>
         <li>Tigers are the largest of the big cats, weighing up to 300 kg.</li>
@@ -33,5 +34,8 @@
         <li>Indochinese tiger (about 1,000)</li>
         <li>Sumatran tiger (about 500)</li>
     </ol>
+    <!-- <img src="http://tny.im/b1k" height="200">
+    <img class="image" height="200" alt="Just but a meme">
+    <img class="image" src="https://bit.ly/2MtoP9D" height="200"> -->
 </body>
 </html>
