--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>Wave your arms above your head and scream as loud as you can!</li>
     </ol>
     <h1><em>Tigers</em></h1>
-    <p>Here are some fun facts about tigers.</p>
+    <p id="yellow">Here are some fun facts about tigers.</p>
     <ul>
         <li>Tigers are the largest of the big cats, weighing up to 300 kg.</li>
         <li>Each tiger's stripes are unique.</li>
@@ -38,5 +38,6 @@
     <!-- <img src="http://tny.im/b1k" height="200">
     <img class="image" height="200" alt="Just but a meme">
     <img class="image" src="https://bit.ly/2MtoP9D" height="200"> -->
+    <a href="#">view more</a>
 </body>
 </html>
