Some changes made

--- a/band.html
+++ b/band.html
@@ -9,15 +9,21 @@
 <body>
     <!-- START OF THE SECTION-->
     <section class="sectionone">
-        <h1>THE SAUTI SOL GROUP</h1>
-        <ul>
-            <li>- Bien Baraza</li>
-            <li>- Willis Chimano</li>
-            <li>- Savara Mudigi</li>
-            <li>- Polycarp Otieno</li>
-        </ul>
-        <p>“Where words fail, music speaks.”</p>
-        <p> <span> < </span> 2005 - 2023 <span> > </span></p>
+        <div class="banner">
+            <h1>THE SAUTI SOL GROUP</h1>
+            <ul>
+                <li>- Bien Baraza</li>
+                <li>- Willis Chimano</li>
+                <li>- Savara Mudigi</li>
+                <li>- Polycarp Otieno</li>
+            </ul>
+            <p>“Where words fail, music speaks.”</p>
+            <p> <span> < </span> 2005 - 2023 <span> > </span></p>
+        </div>
+        <div class="button">
+            <a href="https://www.youtube.com/channel/UCBZPPYU_l99Mg6-GXm6xbMg">More of Us</a>
+        </div>
+        
     </section>
     <!-- END OF SECTION ONE -->
 
@@ -142,7 +148,7 @@
                 </div>
             </div>
             <div class="footing">
-                ©SolGeneration.
+                ©SolGeneration2023.
             </div>
         </div>
     </section>
