This was my first personal project at Moringa School. It was fun

--- a/index.html
+++ b/index.html
@@ -1,331 +1,156 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.sectionone{
-    height: 100vh;
-    width: 100vw;
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(./background_img.jpg);
-    background-position: top;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-}
-.sectionone h1{
-    font-style: italic;
-    font-size: 42px;
-    font-weight: 700;
-    color: #fff;
-}
-.sectionone li{
-    list-style: disc;
-    display: inline-block;
-    margin-right: 10px;
-    font-size: 20px;
-    font-weight: 600;
-    color: aqua;
-    margin-top: 15px;
-    font-style: italic;
-}
-.sectionone p{
-    font-style: italic;
-    font-size: 38px;
-    font-weight: bolder;
-    color: white;
-    margin-top: 10px;
-}
-.sectionone span{
-    color: aqua;
-    font-size: 30px;
-}
-.sectionone a{
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: 600;
-    padding: 10px 20px;
-    border-radius: 25px;
-    background-color: transparent;
-    color: white;
-    border: solid 2px aqua;
-}
-.sectionone a:hover{
-    background-color: aqua;
-    color: #fff;
-}
-.sectionone .button{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favourite-Band</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <!-- START OF THE SECTION-->
+    <section class="sectionone">
+        <div class="banner">
 
-}
-.sectionone .banner{
-    height: 80%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+            <h1>THE SAUTI SOL GROUP</h1>
+            <ul>
+                <li>- Bien Baraza</li>
+                <li>- Willis Chimano</li>
+                <li>- Savara Mudigi</li>
+                <li>- Polycarp Otieno</li>
+            </ul>
+            <p>“Where words fail, music speaks.”</p>
+            <p> <span> < </span> 2005 - 2023 <span> > </span></p>
+        </div>
+        <div class="button">
+            <a href="https://www.youtube.com/channel/UCBZPPYU_l99Mg6-GXm6xbMg">More of Us</a>
+        </div>
+    </section>
+    <!-- END OF SECTION ONE -->
 
-/* END OF SECTION ONE */
+    <!-- START OF SECTION TWO -->
+    <section class="sectiontwo">
+        <div class="maindiv">
+            <div class="fav">
+                <p class="first">Sauti Sol is a Kenyan Afro Pop Band formed in Nairi in 2005. It's members include Bien Baraza, Willis Chimano, Savara Mudigi and Polycarp Otieno. The team released their first album in 2008 by the name Mwanzo. It is said that Bien Baraza, Willis Chimano and Savara Mudigi were Schoolmates who met Polycarp Otieno in Alliance Francaise in Nairobi.</p>
+                <p class="second">Sauti Sol remains to be my favourite band because their songs inspire me alot. Most of their songs talk about love live among the youth today. The group does Afro-pop and Kapuka music genre. The group has been featured by many African artists including Nigerians' Yemi Alande, Patoranking, Tiwa Savage, Burna Boy, Khaligraph Jones, Nyashinski, Ali Kiba and many others.</p>
+                <p class="third">Their albums include: 
+                    <ol>
+                        <li><a href="https://www.boomplay.com/albums/7499222?from=artists">Mwanzo (2008)</a></li>
+                        <li> <a href="https://www.boomplay.com/albums/7491224?from=artists">Sol Filosofia (2011)</a></li>
+                        <li><a href="https://www.boomplay.com/albums/13359?from=artists">Live and die in Africa (2015)</a> </li>
+                        <li><a href="https://www.boomplay.com/albums/2441291?from=artists">Africa Sauce(2019)</a> </li>
+                        <li> <a href="https://www.boomplay.com/albums/12679577?from=artists">Midnight Train(2020)</a></li>
+                    </ol>
+                </p>
+                <p class="fourth">Here are my top 5 songs from the band:
+                    <ul>
+                        <li><a target="_self" href="https://www.boomplay.com/songs/109328123?from=artists">Lil Mama</a></li>
+                        <li><a target="_self" href="https://www.boomplay.com/songs/37984273?from=artists">Suzzana</a></li>
+                        <li><a target="_self" href="https://www.boomplay.com/songs/4708226?from=artists">Short N sweet ft Nyashinski</a></li>
+                        <li><a target="_self" href="https://www.boomplay.com/songs/35849?from=artists">Sura Yako</a></li>
+                        <li><a target="_self" href="https://www.boomplay.com/songs/35850?from=artists">Live and Die in Afrika</a></li>
+                    </ul>
+                </p>
+            </div>
+            <p class="fifth">The folloing is a list of the band members and their biographies</p>
+            <div class="bandmember">
+                <div class="bien">
+                    <img src="./bien.jpg" alt="" height="150">
+                    <p>
+                        <strong>Name:</strong> Bien-Aimé Baraza <br>
+                        <strong>D.O.B: </strong>28/Dec/1987 <br>
+                        <strong>Education:</strong> USIU (Journalism and Media Studies.) <br>
+                        <strong>Religion:</strong> Christianity <br>
+                        <strong>Spouse:</strong> Chiki Kuruka <br>
+                        <strong>Career:</strong> Musician <br>
+                        <strong>Net Worth:</strong> $2,000,000
+                    </p>
+                </div>
+                <div class="willis">
+                    <img src="./Chimano-solo.jpg" alt="" height="150" width="150">
+                    <p>
+                        <strong>Name:</strong> Willis Austin Chimano <br>
+                        <strong>D.O.B:</strong> 09/July/1987 <br>
+                        <strong>Education:</strong> UON (Journalism and Media Studies.) <br>
+                        <strong>Religion</strong> N/A <br>
+                        <strong>Spouse:</strong> N/A <br>
+                        <strong>Career:</strong> Musician <br>
+                        <strong>Net Worth:</strong> $2,000,000
+                    </p>
+                </div>
+                <div class="savara">
+                    <img src="./savar.jpg" alt="" height="150" >
+                    <p>
+                        <strong>Name:</strong> Delvin Mudigi <br>
+                        <strong>D.O.B:</strong> 25/May/1987 <br>
+                        <strong>Education:</strong> Nazarene University(Commerce and Finance) <br>
+                        <strong>Religion:</strong> Christianity <br>
+                        <strong>Spouse:</strong> Yvonne Endo  <br>
+                        <strong>Career:</strong> Musician <br>
+                        <strong>Net Worth:</strong> $2,000,000
+                    </p>
+                </div>
+                <div class="polycarp">
+                    <img src="./polycarp.jpg" alt="" height="150">
+                    <p>
+                        <strong>Name:</strong> Polycarp Otieno <br>
+                       <strong> D.O.B:</strong> 14/Nov/1987 <br>
+                        <strong>Education:</strong> USIU (Journalism and Media Studies.) <br>
+                        <strong>Religion:</strong> Christianity <br>
+                        <strong>Spouse:</strong> Lady Mandy<br>
+                        <strong>Children:</strong> Baby O
+                        <strong>Career:</strong> Musician <br>
+                        <strong>Net Worth:</strong> $2,000,000
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END OF SECTION TWO -->
 
-/* START OF SECTION TWO */
-.sectiontwo{
-    height: 120vh;
-    width: 100vw;
-    background-color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-}
-.sectiontwo .maindiv{
-    height: 90%;
-    width: 90%;
-}
-.sectiontwo .first{
-    font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif,"sans-serif";
-}
-.sectiontwo .second{
-    font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif,"sans-serif";
-}
-.sectiontwo .third{
-    font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif,"sans-serif";
-}
-.third li{
-    font-style: italic;
-    color: gray;
-}
-.sectiontwo .fourth{
-    font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif,"sans-serif";
-}
-.fav ol{
-    margin-left: 70px;
-    color: aqua;
-    font-style: italic;
-}
-.fav a{
-    font-style: italic;
-    font-size: 18px;
-    color: aqua;
-    text-decoration: none;
-}
-.fav ul{
-    margin-left: 70px;
-}
-.fav a:hover{
-    color: #fff;
-    text-decoration: underline;
-}
-.fifth{
-    margin-top: 20px;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.bandmember{
-    margin-top: 70px;
-    height: 40%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.bandmember .bien{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: row;
-}
-.bandmember .willis{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: row;
-}
-.bandmember .savara{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: row;
-}
-.bandmember .polycarp{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: row;
-}
-.bandmember img{
-    margin-right: 10px;
-    border-radius: 50%;
-}
-.bandmember p{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    line-height: 1.3;
-}
-/* END OF SECTION TWO */
-
-/* START OF SECTION THREE */
-.sectionthree{
-    height: 50vh;
-    width: 100vw;
-    background-color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.sectionthree .footer{
-    height: 90%;
-    width: 90%;
-    color: white;
-    display: flex;
-    flex-direction: column;
-}
-.footer .mainpart{
-    height: 80%;
-    width: 100%;
-    background-color: #130909;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-.mainpart .logo{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-right: solid 1px gray;
-}
-.logo img{
-    height: 250px;
-    width: 250px;
-    
-}
-.mainpart .call4action{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-right: solid 1px gray;
-}
-.call4action p{
-    margin-bottom: 20px;
-    font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: -67px;
-}
-.call4action input{
-    height: 30px;
-    width: 80%;
-    border: solid 1px gray;
-    border-radius: 5px;
-}
-.call4action ::placeholder{
-    color: #000;
-    padding-left: 20px;
-}
-.call4action button{
-    padding: 8px 20px;
-    margin: none;
-    border: solid 2px white;
-    color: white;
-    border-radius: 25px;
-    background-color: transparent;
-    margin-left: -190px;
-    transition: 1ms;
-}
-.call4action button:hover{
-    background-color: white;
-    color: black;
-    transform: scale(1.07);
-    font-weight: 600;
-    cursor: pointer;
-}
-.mainpart .socialmedia{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-right: solid 1px gray;
-}
-.links img{
-    margin-top: 30px;
-    margin-left: 10px;
-    height: 30px;
-    width: 30px;
-    background-color: transparent;
-    border: solid 2px aqua;
-    padding: 5px;
-    border-radius: 50%;
-    transition: 50ms;
-}
-.links img:hover{
-    border: solid 2px white;
-    background-color: transparent; 
-}
-.socialmedia p{
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.mainpart .contacts{
-    height: 100%;
-    width: 24%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.links a {
-    text-decoration: none;
-}
-.contacts .reach{
-    margin-bottom: 20px;
-    margin-left: -75px;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.contact a{
-    text-decoration: none;
-    color: white;
-    font-style: italic;
-   line-height: 1.5;
-}
-.contacts a:hover{
-    text-decoration: underline;
-    color: aqua;
-}
-.contact .tel{
-    margin-top: 10px;
-    cursor: pointer;
-}
-.footer {
-    height: 20%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #000;
-}
-/* END OF SECTION THREE */
-/* LET'S ENJOY THE WEEKEND */
+    <!-- START OF SECTION THREE -->
+    <section class="sectionthree">
+        <div class="footer">
+            <div class="mainpart">
+                <div class="logo">
+                    <img src="./logo-removebg-preview.png" alt="">
+                </div>
+                <div class="call4action">
+                    <p>Your Feedback is appreciated</p>
+                    <input type="email" placeholder="Please Enter Your Email"> <br>
+                    <input type="text" placeholder="Enter your Feedback"> <br>
+                    <button>Submit</button>
+                </div>
+                <div class="socialmedia">
+                    <p>Visit our social Media Platforms</p>
+                    <div class="links">
+                        <a href="https://www.youtube.com/channel/UCBZPPYU_l99Mg6-GXm6xbMg">
+                            <img src="./youtube.png" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/sautisol/">
+                            <img src="./instagram.png" alt="">
+                        </a>
+                        <a href="https://www.facebook.com/SautiSol/">
+                            <img src="./facebook.png" alt="">
+                        </a>
+                        <a href="https://twitter.com/sautisol">
+                            <img src="./twitter.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="contacts">
+                    <p class="reach">Contact Us</p>
+                    <div class="contact">
+                        <a href="www.sauti-sol.com">www.sauti-sol.com</a> <br>
+                        <a href="bookings@sauti-sol.com">bookings@sauti-sol.com</a>
+                        <p class="tel">Tel: 0711 264667</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footing">
+                ©SolGeneration.
+            </div>
+        </div>
+    </section>
+</body>
+</html>
