Added footer content

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="footing">
-                ©SolGeneration.
+                ©SolGeneration2023.
             </div>
         </div>
     </section>
