Added more information on the Biography section

--- a/index.html
+++ b/index.html
@@ -62,19 +62,18 @@
                         <strong>Education:</strong> USIU (Journalism and Media Studies.) <br>
                         <strong>Religion:</strong> Christianity <br>
                         <strong>Spouse:</strong> Chiki Kuruka <br>
-                        <strong>Career:</strong> Musician <br>
+                        <!-- <strong>Career:</strong> Musician <br> -->
                         <strong>Net Worth:</strong> $2,000,000
                     </p>
                 </div>
                 <div class="willis">
                     <img src="./Chimano-solo.jpg" alt="" height="150" width="150">
-                    <p>
+                 <p>
                         <strong>Name:</strong> Willis Austin Chimano <br>
                         <strong>D.O.B:</strong> 09/July/1987 <br>
                         <strong>Education:</strong> UON (Journalism and Media Studies.) <br>
                         <strong>Religion</strong> N/A <br>
                         <strong>Spouse:</strong> N/A <br>
-                        <strong>Career:</strong> Musician <br>
                         <strong>Net Worth:</strong> $2,000,000
                     </p>
                 </div>
@@ -86,7 +85,7 @@
                         <strong>Education:</strong> Nazarene University(Commerce and Finance) <br>
                         <strong>Religion:</strong> Christianity <br>
                         <strong>Spouse:</strong> Yvonne Endo  <br>
-                        <strong>Career:</strong> Musician <br>
+                        <!-- <strong>Career:</strong> Musician <br> -->
                         <strong>Net Worth:</strong> $2,000,000
                     </p>
                 </div>
@@ -99,7 +98,7 @@
                         <strong>Religion:</strong> Christianity <br>
                         <strong>Spouse:</strong> Lady Mandy<br>
                         <strong>Children:</strong> Baby O
-                        <strong>Career:</strong> Musician <br>
+                        <!-- qqqqqq<strong>Career:</strong> Musician <br> -->
                         <strong>Net Worth:</strong> $2,000,000
                     </p>
                 </div>
