Added the partnership section

--- a/index.html
+++ b/index.html
@@ -151,5 +151,11 @@
             </div>
         </div>
     </section>
+    <!-- End of section three -->
+
+    <!-- Start of section four -->
+    <section class="sectionfour">
+        
+    </section>
 </body>
 </html>
