Added styling to the brands

--- a/index.html
+++ b/index.html
@@ -106,10 +106,15 @@
         </div>
     </section>
     <!-- END OF SECTION TWO -->
-    
+
     <!-- Start of section four -->
     <section class="sectionfour">
-        <div class="partnership"></div>
+        <div class="partnership">
+            <h1>In Partnership With;</h1>
+            <img src="./boomplay.png" alt="" >
+            <img src="./infinix-1.jpg" alt="" >
+            <img src="./infinix-logo.png" alt="" >
+        </div>
     </section>
     <!-- START OF SECTION THREE -->
     <section class="sectionthree">
