Made changes into the pathways of the images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p class="fifth">The folloing is a list of the band members and their biographies</p>
             <div class="bandmember">
                 <div class="bien">
-                    <img src="../bien.jpg" alt="" height="150">
+                    <img src="./Images/bien.jpg" alt="" height="150">
                     <p>
                         <strong>Name:</strong> Bien-Aimé Baraza <br>
                         <strong>D.O.B: </strong>28/Dec/1987 <br>
@@ -67,7 +67,7 @@
                     </p>
                 </div>
                 <div class="willis">
-                    <img src="../Chimano-solo.jpg" alt="" height="150" width="150">
+                    <img src="./Images/Chimano-solo.jpg" alt="" height="150" width="150">
                  <p>
                         <strong>Name:</strong> Willis Austin Chimano <br>
                         <strong>D.O.B:</strong> 09/July/1987 <br>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
                 <div class="savara">
-                    <img src="../savar.jpg" alt="" height="150" >
+                    <img src="./Images/savar.jpg" alt="" height="150" >
                     <p>
                         <strong>Name:</strong> Delvin Mudigi <br>
                         <strong>D.O.B:</strong> 25/May/1987 <br>
@@ -90,7 +90,7 @@
                     </p>
                 </div>
                 <div class="polycarp">
-                    <img src="../polycarp.jpg" alt="" height="150">
+                    <img src="./Images/polycarp.jpg" alt="" height="150">
                     <p>
                         <strong>Name:</strong> Polycarp Otieno <br>
                        <strong> D.O.B:</strong> 14/Nov/1987 <br>
@@ -111,9 +111,9 @@
     <section class="sectionfour">
         <div class="partnership">
             <h1>In Partnership With;</h1>
-            <img src="../boomplay.png" alt="" >
-            <img src="../infinix-1.jpg" alt="" >
-            <img src="../infinix-logo.png" alt="" >
+            <img src="./Images/boomplay.png" alt="" >
+            <img src="./Images/infinix-1.jpg" alt="" >
+            <img src="./Images/infinix-logo.png" alt="" >
         </div>
     </section>
     <!-- START OF SECTION THREE -->
@@ -121,7 +121,7 @@
         <div class="footer">
             <div class="mainpart">
                 <div class="logo">
-                    <img src="../logo-removebg-preview.png" alt="">
+                    <img src="./Images/logo-removebg-preview.png" alt="">
                 </div>
                 <div class="call4action">
                     <p>Your Feedback is appreciated</p>
@@ -133,16 +133,16 @@
                     <p>Visit our social Media Platforms</p>
                     <div class="links">
                         <a href="https://www.youtube.com/channel/UCBZPPYU_l99Mg6-GXm6xbMg">
-                            <img src="../youtube.png" alt="">
+                            <img src="./Images/youtube.png" alt="">
                         </a>
                         <a href="https://www.instagram.com/sautisol/">
-                            <img src="../instagram.png" alt="">
+                            <img src="./Images/instagram.png" alt="">
                         </a>
                         <a href="https://www.facebook.com/SautiSol/">
-                            <img src="../facebook.png" alt="">
+                            <img src="./Images/facebook.png" alt="">
                         </a>
                         <a href="https://twitter.com/sautisol">
-                            <img src="../twitter.png" alt="">
+                            <img src="./Images/twitter.png" alt="">
                         </a>
                     </div>
                 </div>
